--- a/frontend/angular-jwt-admin-system/src/app/ui/footer/footer.component.scss
+++ b/frontend/angular-jwt-admin-system/src/app/ui/footer/footer.component.scss
@@ -1,5 +1,7 @@
 .footer{
     padding:30px;
     min-height: 200px;
-    background-color: #0097a7;
+    color:whitesmoke;
+    background-color: rgb(49, 73, 117);
+    background-color: var(--my-primary-color)
     }
