--- a/frontend/angular-jwt-admin-system/src/app/ui/top-nav/top-nav.component.html
+++ b/frontend/angular-jwt-admin-system/src/app/ui/top-nav/top-nav.component.html
@@ -2,7 +2,7 @@
     <button pButton pRipple type="button" icon="pi pi-bars" class="sideBarOpenSmall p-button-rounded p-button-secondary"
           onclick="sideBarSmallFunc()"></button>     
     <a pRipple routerLink="/start" class="active">Home</a>
-    <a pRipple routerLink="/contact" >Contacte</a>
+    <a pRipple routerLink="/announcements" >Ogłoszenia</a>
     
     <button pButton pRipple type="button" icon="pi pi-bars" class="menuBarOpenSmall p-button-rounded p-button-secondary"
     onclick="topNavSmallFunc()"></button>
