--- a/frontend/angular-jwt-admin-system/src/app/pages/zarzadzanie/auth-users/role/role.component.html
+++ b/frontend/angular-jwt-admin-system/src/app/pages/zarzadzanie/auth-users/role/role.component.html
@@ -1,4 +1,5 @@
-<p-toast></p-toast>
+<p-toast position="bottom-center"></p-toast>
+<p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
 
 <div class="card">
     <p-toolbar styleClass="p-mb-4">
@@ -86,6 +87,4 @@ styleClass="p-fluid respDialog" [contentStyle]="{ height:'350px'}" [formGroup]="
         <p-button icon="pi pi-check" (click)="rolaDialog=false; rolaForm.reset()" label="Ok" styleClass="p-button-text"></p-button>
     </ng-template>
 </p-dialog>
-
-<p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
 
