--- a/frontend/angular-jwt-admin-system/src/app/pages/zarzadzanie/auth-users/users/users.component.html
+++ b/frontend/angular-jwt-admin-system/src/app/pages/zarzadzanie/auth-users/users/users.component.html
@@ -1,4 +1,5 @@
-<p-toast></p-toast>
+<p-toast position="bottom-center"></p-toast>
+<p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
 
 <div class="card">
   
@@ -112,5 +113,4 @@ styleClass="p-fluid respDialog" [contentStyle]="{ height:'80vh'}" [formGroup]="u
     </ng-template>
 </p-dialog>
 
-<p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
 
