--- a/frontend/angular-jwt-admin-system/src/app/pages/zarzadzanie/grupy/grupy.component.html
+++ b/frontend/angular-jwt-admin-system/src/app/pages/zarzadzanie/grupy/grupy.component.html
@@ -1,4 +1,5 @@
-<p-toast></p-toast>
+<p-toast position="bottom-center"></p-toast>
+<p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
 
 <div class="card">
     <p-toolbar styleClass="p-mb-4">
@@ -86,5 +87,4 @@ styleClass="p-fluid respDialog" [contentStyle]="{ height:'350px'}" [formGroup]="
     </ng-template>
 </p-dialog>
 
-<p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
 
