--- a/frontend/angular-jwt-admin-system/src/styles.scss
+++ b/frontend/angular-jwt-admin-system/src/styles.scss
@@ -1,35 +1,20 @@
 @import './css/buttonX.css';
 @import './css/prime-table.scss';
+
+:root {
+  --my-primary-color: var(--cyan-700);
+  --my-secondary-color: var(--blue-300);
+  --white: #ffffff;
+}
 body {
     margin: 0;
     font-family: "Lato", sans-serif;
   }
-.shadow{ box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.03);}
-.shadow-sm{ box-shadow: 0px 0px 4px rgba(0,0,0,0.12);}  
-.bg-primecolor{
-    background-color: #0097a7;
-}
-.bg-primecolor-light{
-    background-color: #56c8d8;
-}
-.bg-primecolor-dark{
-    background-color: #006978;
-}
-.active {    
-    color:#ffd64f!important;
-  }
-  .active:hover{
-      color: rgb(226, 62, 2)!important;
-  }
-  .btn-round{
-      padding: 10px 15px !important;
-      border-radius: 40px;
-      margin:auto
-  }
-  .m-1{
+
+.m-1{
       margin:5px!important;
   }  
-  .m-2{
+.m-2{
     margin:10px!important;
 }
 .m-3{
