--- a/frontend/angular-jwt-admin-system/src/app/ui/top-nav/top-nav.component.html
+++ b/frontend/angular-jwt-admin-system/src/app/ui/top-nav/top-nav.component.html
@@ -1,8 +1,8 @@
 <div class="topnav" id="myTopnav" >
     <button pButton pRipple type="button" icon="pi pi-bars" class="sideBarOpenSmall p-button-rounded p-button-secondary"
           onclick="sideBarSmallFunc()"></button>     
-    <a pRipple routerLink="/start" class="active">Home</a>
-    <a pRipple routerLink="/announcements" >Ogłoszenia</a>
+    <a pRipple routerLink="start" class="active">Home</a>
+    <a pRipple routerLink="announcements" >Ogłoszenia</a>
     
     <button pButton pRipple type="button" icon="pi pi-bars" class="menuBarOpenSmall p-button-rounded p-button-secondary"
     onclick="topNavSmallFunc()"></button>
