--- a/frontend/angular-jwt-admin-system/src/app/pages/zarzadzanie/auth-users/privileges/privileges.component.html
+++ b/frontend/angular-jwt-admin-system/src/app/pages/zarzadzanie/auth-users/privileges/privileges.component.html
@@ -43,9 +43,13 @@
                 <td><span class="p-column-title">Nazwa</span> {{privilege.name}}</td>
                 <td>
                     <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-mr-2" 
-                    (click)="editPrivilege(privilege)"></button>
+                    (click)="editPrivilege(privilege)" [disabled]="privilege.name === 'ONLY_ADMIN_PRIVILEGE' 
+                        || privilege.name === 'WRITE_PRIVILEGE'
+                        || privilege.name === 'READ_PRIVILEGE'"></button>
                     <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" 
-                    (click)="deletePrivilege(privilege)"></button>
+                    (click)="deletePrivilege(privilege)" [disabled]="privilege.name === 'ONLY_ADMIN_PRIVILEGE'
+                    || privilege.name === 'WRITE_PRIVILEGE'
+                    || privilege.name === 'READ_PRIVILEGE'"></button>
                 </td>
             </tr>
         </ng-template>
