--- a/frontend/angular-jwt-admin-system/src/app/pages/announcements/announcements.component.scss
+++ b/frontend/angular-jwt-admin-system/src/app/pages/announcements/announcements.component.scss
@@ -1,111 +1,202 @@
 :host ::ng-deep {
-    .p-dropdown {
-        width: 14rem;
-        font-weight: normal;
+
+
+    .p-dataview .p-dataview-header {
+        background: none!important;
+        border: none!important;
     }
-    
+    .p-dataview-content{
+        border: none!important;
+        background-color:transparent;
+      }
     .announcement-title {
-        font-size: 1.5rem;
-        font-weight: 700;
-    }
-    
+          font-size: 1.2rem;
+          font-weight: 600;
+      }
+
     .announcement-description {
-        margin: 0 0 1rem 0;
+        margin: 0.3rem 0 0.3rem 0;
+        text-align:left;
     }
-    
+
     .announcement-category-icon {
         vertical-align: middle;
         margin-right: .5rem;
         color: tomato;
     }
-    
+
     .announcement-category {
         font-weight: 600;
         vertical-align: middle;
     }
-    
+
     .announcement-list-item {
         display: flex;
-        align-items: center;
-        width: 100%;
-    
-        img {
-            width: 150px;
-            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-            margin-right: 2rem;
-        }
-    
-        .announcement-list-detail {
-            flex: 1 1 0;
-        }
-    
-        .p-rating {
-            margin: 0 0 .5rem 0;
-        }
-    
-        .announcement-price {
-            font-size: 1.5rem;
-            font-weight: 600;
-            margin-bottom: .5rem;
-            align-self: flex-end;
-        }
-    
-        .announcement-list-action {
-            display: flex;
-            flex-direction: column;
-        }
-    
-        .p-button {
-            margin-bottom: .5rem;
-        }
+        padding: 20px;
+        cursor: pointer;
+        transition: 0.2s;
+          img {
+                width: 300px;
+                height: auto;
+
+                padding: 0;
+                box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+            }
+            &:hover{
+              transform:translateX(3px);
+            }
+
+            .announcement-list-detail {
+                padding-left: 20px;
+                width: 100%;
+            }
+
+            .p-rating {
+                margin: 0 0 .5rem 0;
+            }
+
+            .announcement-price {
+                font-size: 1.5rem;
+                font-weight: 600;
+                margin-bottom: .5rem;
+                align-self: flex-end;
+            }
+
+            .announcement-list-action {
+                display: flex;
+                flex-direction: column;
+            }
+
+            .p-button {
+                margin-bottom: .5rem;
+            }
     }
-    .p-b-1{
-        border:1px solid whitesmoke;
-        border-radius: 3px;
-    }
+
     .announcement-grid-item {
-        margin: .5em;
-        border: 1px solid #dee2e6;
-    
+        margin: .2em;
+        border: none;
+        box-shadow: none!important;
+        color:rgb(63, 63, 63);
+        transition: 0.3s;
+        cursor: pointer;
+
         img {
-            width: 75%;
+            width: 100%;
             box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-            margin: 2rem 0;
+            padding: 0;
         }
-    
+        &:hover{
+          transform:translateX(3px);
+          box-shadow: 1px 2px 7px 2px rgb(151, 219, 250);
+        }
+
         .announcement-grid-item-content {
-            text-align: center;
-            min-height: 150px;
-            overflow: auto;
+            text-align: left;
+            overflow: hidden;
+            line-height: 1.5rem;
         }
-    
+
+        .announcement-grid-item-content.moreContent {
+
+      }
         .announcement-price {
             font-size: 1.5rem;
             font-weight: 600;
         }
     }
+
     .announcement-grid-item-top,
         .announcement-item-bottom {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding:5px!important;
-            border-top: 1px dashed rgb(236, 234, 234);
-            font-size: smaller;
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              padding:5px!important;
+              font-size: smaller;
+        }
+        .announcement-item-bottom {
+              width: 100%;
+              position: absolute;
+              bottom: 0px;
+              background-color: rgb(255, 255, 255);
+        }
+        .p-dropdown{
+              min-width:100%!important
+        }
+
+        .p-inputgroup{
+          width: 57%;
+        }
+        .p-dataview.p-dataview-list .p-dataview-content > .p-grid > div{
+              border:none;
+        }
+        .p-dataview .p-paginator{
+              background-color: transparent;
+              border:none;
         }
 }
 
-.card {
-    padding: 0;
-    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-    margin-bottom: 2rem;
-    overflow: auto;
-}
+    .card {
+              padding: 2px;
+              box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+              border-radius: 4px;
+              background-color: white;
+              overflow: hidden;
+              height: 500px;
+              position: relative;
+          }
 
-@media screen and (max-width: 876px) {
-    :host ::ng-deep .headerD {
-        flex-direction: column;
-        gap: 7px;
+    .dataViewMenuTop{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 5px;
     }
-}
+
+    @media screen and (max-width: 768px){
+              .optionsDataView{
+                display: none;
+              }
+              :host ::ng-deep {
+                .announcement-grid-item-content, .announcement-grid-item-content.moreContent {
+                  border:none
+                }
+
+                .dataViewMenuTop{
+                  display: flex;
+                  flex-direction:column-reverse;
+                  gap: 5px;
+                  & p-dropdown {
+                    width: 80%!important;
+                  }
+                }
+                .p-inputgroup{
+                  width: 80%!important;
+                }
+
+              }
+              .card{height: auto;}
+    }
+
+    @media screen and (max-width: 1200px){
+          :host ::ng-deep {
+              .announcement-grid-item-content, .announcement-grid-item-content.moreContent {
+                height: auto!important;
+              }
+        }
+    }
+
+    @media screen and (max-width: 800px){
+
+          .announcement-list-item {
+                flex-direction: column;
+                img {
+                  width: 100%;
+                  height: auto;
+              }
+              .announcement-list-detail {
+
+                padding-left: 0px;
+                width: 100%;
+              }
+        }
+  }
