--- a/frontend/angular-jwt-admin-system/src/app/ui/top-nav/top-nav.component.html
+++ b/frontend/angular-jwt-admin-system/src/app/ui/top-nav/top-nav.component.html
@@ -1,11 +1,11 @@
 <div class="topnav" id="myTopnav" >
-    <button pButton pRipple type="button" icon="pi pi-bars" class="sideBarOpenSmall p-button-rounded p-button-secondary"
-          onclick="sideBarSmallFunc()"></button>     
+    <button pButton pRipple type="button" icon="pi pi-bars" class="sideBarOpenSmall p-button-rounded"
+          onclick="sideBarSmallFunc()"></button>
     <a pRipple routerLink="start" class="active">Home</a>
     <a pRipple routerLink="announcements" >Ogłoszenia</a>
-    
-    <button pButton pRipple type="button" icon="pi pi-bars" class="menuBarOpenSmall p-button-rounded p-button-secondary"
+
+    <button pButton pRipple type="button" icon="pi pi-bars" class="menuBarOpenSmall p-button-rounded"
     onclick="topNavSmallFunc()"></button>
-    <button pButton pRipple type="button" routerLink="/login"  icon="pi pi-user" 
-            class="p-button-rounded p-button-success logIcon"></button>              
+    <button pButton pRipple type="button" routerLink="/login"  icon="pi pi-user"
+            class="p-button-rounded p-button-success logIcon"></button>
   </div>
