--- a/backend/spring-jwt-admin-system/.settings/org.eclipse.wst.common.component
+++ b/backend/spring-jwt-admin-system/.settings/org.eclipse.wst.common.component
@@ -1,11 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-        
-    <wb-module deploy-name="spring-jwt-admin-system">
-                
-        <wb-resource deploy-path="/" source-path="/src/main/java"/>
-                
-        <wb-resource deploy-path="/" source-path="/src/main/resources"/>
-            
-    </wb-module>
+                    
     
+    
+    
+    <wb-module deploy-name="spring-boot-jwt">
+                                        
+        
+        
+        
+        <wb-resource deploy-path="/" source-path="/src/main/java"/>
+                                        
+        
+        
+        
+        <wb-resource deploy-path="/" source-path="/src/main/resources"/>
+                        
+        
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                        
+        
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                        
+        
+        <property name="context-root" value="spring-boot-jwt"/>
+                        
+        
+        <property name="java-output-path" value="/spring-jwt-admin-system/target/classes"/>
+                                    
+    
+    
+    
+    </wb-module>
+                
+
+
+
 </project-modules>
