--- a/frontend/angular-jwt-admin-system/src/app/pages/announcements/announcements.component.html
+++ b/frontend/angular-jwt-admin-system/src/app/pages/announcements/announcements.component.html
@@ -1,65 +1,93 @@
 <p-toast position="bottom-center"></p-toast>
 <p-confirmDialog [style]="{width: '450px'}" ></p-confirmDialog>
-<div class="card"  *ngIf="announcementsList">
-    <p-dataView #dv [value]="announcementsList" [paginator]="true" [rows]="9" filterBy="description,title"
-        [sortField]="sortField" [sortOrder]="sortOrder" layout="grid" >
-        <ng-template pTemplate="header">
-            <div class="p-d-flex p-jc-sm-between  headerD" style="overflow: auto">
-                <div  style="flex-wrap: wrap">
-                <p-dropdown  [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Sortuj" (onChange)="onSortChange($event)"
-                            styleClass="p-mb-2 p-mb-md-0" ></p-dropdown>
 
-                <span class="p-input-icon-left p-mb-2 p-mb-md-0 p-ml-1">
+<div  >
+    <p-dataView #dv [value]="announcementsList" *ngIf="announcementsList"
+                    [paginator]="true"
+                    [rows]="50"
+                    filterBy="description,title"
+                    [sortField]="sortField"
+                    [sortOrder]="sortOrder"
+                    [layout]="gridOrList"
+                    [emptyMessage]="'Brak wyników'" >
+        <ng-template pTemplate="header">
+            <div class="dataViewMenuTop" >
+                <p-dropdown  [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Sortuj" (onChange)="onSortChange($event)"
+                            class="sortOptions"></p-dropdown>
+                  <!--  <div class="p-input-icon-left">
                     <i class="pi pi-search"></i>
-                    <input type="search"  pInputText placeholder="Szukaj" (input)="dv.filter($event.target.value)">
-                </span>
+                    <input type="search"  pInputText placeholder="Szukaj" (input)="dv.filter($event.target.value, 'contains')" #changeFilterValue
+                    (keyup)="changeFilter($event)" style="width:100%">
                 </div>
-                <div class="p-d-flex " style=" white-space: nowrap;">
-                    <p-button pRipple  icon="pi pi-plus" (click)="openNew()"
-                    styleClass="p-button-sm p-button-success p-mr-2" *ngIf="hasRole(['MODERATOR', 'ADMIN'])"></p-button>
-                    <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
+                  -->
+                  <div class="p-inputgroup">
+                      <input type="text" pInputText placeholder="Szukane słowo" [(ngModel)]="findWord">
+                      <button type="button" pButton pRipple label="Szukaj" (click)="findAnnoByWord()"></button>
+                  </div>
+
+                <div style=" display: flex;width: 80%;white-space: nowrap;justify-content: end;">
+                    <p-button icon="pi pi-plus" (click)="openNew()"
+                    styleClass="p-button-sm p-button-success buttonRespon mr-2" *ngIf="hasRole(['MODERATOR', 'ADMIN'])"></p-button>
+                    <p-dataViewLayoutOptions class="optionsDataView" ></p-dataViewLayoutOptions>
                 </div>
             </div>
         </ng-template>
-        <ng-template let-announcement pTemplate="listItem">
-            <div class="p-col-12">
-                <div class="p-p-1">
+        <ng-template let-announcement pTemplate="listItem" >
+            <div class="p-col-12" id="{{announcement.id}}" ></div>
+            <div style="background-color: white;margin-top: 3px;width: 100%;position: relative;">
+                <div class="p-p-1" style="display: flex;justify-content: space-between;">
+                  <div>
                     <i class="pi pi-clock announcement-category-icon"></i>
                     <span class="announcement-user">{{announcement.date | date:'dd/MM/yy H:mm'}}</span>
-                </div>
-                <div class="announcement-list-item">
-                    <div class="announcement-list-detail">
-                        <div class="announcement-title p-p-2">{{announcement.title}}</div>
-                        <div class="announcement-description p-p-2">{{announcement.description}}</div>
-                        <div class="announcement-item-bottom" *ngIf="hasRole(['MODERATOR', 'ADMIN'])">
-                            <!--<span class="announcement-user">{{announcement.user.username}}</span>-->
-                            <div>
-                                <button pButton pRipple type="button" icon="pi pi-times" label="Usuń"
-                                class="p-button-sm p-button-rounded p-button-outlined p-button-danger p-mr-2"
-                                (click)="deleteAnnouncement(announcement)"></button>
-                                <button pButton pRipple type="button" icon="pi pi-check" label="Edytuj"
-                                class="p-button-sm p-button-rounded p-button-outlined p-button-success"
-                                (click)="editAnnouncement(announcement)"></button>
-                            </div>
+                    </div>
+                          <div *ngIf="checkUser(announcement.user.id)">
+                            <button pButton pRipple type="button" icon="pi pi-times"
+                            class="p-button-sm p-button-rounded p-button-outlined p-button-danger p-mr-2" style="height: 25px;width:25px"
+                            (click)="deleteAnnouncement(announcement)"></button>
+                            <button pButton pRipple type="button" icon="pi pi-check" style="height: 25px;width:25px"
+                            class="p-button-sm p-button-rounded p-button-outlined p-button-success"
+                            (click)="editAnnouncement(announcement)"></button>
                         </div>
+                </div>
+                <div class="announcement-list-item" [routerLink]="['/announcement-details',announcement.id]">
+                  <div *ngIf="announcement.announcementsImagesCollection">
+                    <div *ngFor="let image of announcement.announcementsImagesCollection" >
+                      <img src="data:image/png;base64,{{image.source}}" *ngIf="image.main">
+                    </div>
+                  </div>
+                    <div class="announcement-list-detail">
+                        <div class="announcement-title" >
+                            {{announcement.title}}
+                        </div>
+                        <div class="announcement-description ">{{announcement.description.substr(0, 1000)}}</div>
+
                     </div>
                 </div>
             </div>
         </ng-template>
-        <ng-template let-announcement pTemplate="gridItem">
-            <div class="p-col-12 p-md-4">
+        <ng-template let-announcement pTemplate="gridItem" >
+          <div class="p-col-12 p-md-6  p-xl-4" >
+            <div id="{{announcement.id}}" ></div>
                 <div class="announcement-grid-item card">
                     <div class="p-p-1">
                         <i class="pi pi-clock announcement-category-icon"></i>
                         <span class="announcement-user">{{announcement.date | date:'dd/MM/yy H:mm'}}</span>
                     </div>
-                    <div class="announcement-grid-item-content p-p-2">
-                        <div class="announcement-title">{{announcement.title}}</div>
-                        <div class="announcement-description">{{announcement.description}}</div>
-                    </div>
-                    <div class="announcement-item-bottom" *ngIf="hasRole(['MODERATOR', 'ADMIN'])">
+                    <div [routerLink]="['/announcement-details',announcement.id]">
+                            <div *ngIf="announcement.announcementsImagesCollection">
+                              <div *ngFor="let image of announcement.announcementsImagesCollection" >
+                                <img src="data:image/png;base64,{{image.source}}" *ngIf="image.main">
+                              </div>
+                            </div>
+                        <div class="announcement-grid-item-content p-p-2" [ngClass] = "{'moreContent': announcement.announcementsImagesCollection.length === 0}">
+                            <div class="announcement-title">{{announcement.title}}</div>
+                            <div class="announcement-description" *ngIf="announcement.announcementsImagesCollection.length > 0">{{announcement.description.substr(0,320).substr(0,announcement.description.substr(0,320).lastIndexOf(" "))}}...</div>
+                            <div class="announcement-description" *ngIf="announcement.announcementsImagesCollection.length === 0" >{{announcement.description.substr(0,700).substr(0,announcement.description.substr(0,650).lastIndexOf(" "))}}...</div>
+                          </div>
+                  </div>
+                    <div class="announcement-item-bottom" *ngIf="checkUser(announcement.user.id)">
                         <!--<span class="announcement-user">{{announcement.user.username}}</span>-->
-                        <div>
+                        <div *ngIf="checkUser(announcement.user.id)">
                             <button pButton pRipple type="button" icon="pi pi-times" label="Usuń"
                             class="p-button-sm p-button-rounded p-button-outlined p-button-danger p-mr-2"
                             (click)="deleteAnnouncement(announcement)"></button>
@@ -69,13 +97,13 @@
                         </div>
                     </div>
                 </div>
-            </div>
 
+          </div>
         </ng-template>
     </p-dataView>
 </div>
 
-<div class="p-shadow-1 p-p-2"  *ngIf="announcementsList==null" >
+<div class=" p-p-2"  *ngIf="announcementsList==null" >
 <div class="p-grid">
     <div class="p-col-12 p-md-4 "  *ngFor="let number of [0,1,2,3,4,5,6,7,8]">
       <div class="p-b-1 p-p-1">
@@ -87,24 +115,44 @@
 </div>
 </div>
 
+<p-dialog [(visible)]="announcementDialog"
+          header="Edycja/zapis ogłoszenia"
+          [modal]="true"
+          [style]="{minWidth: '50vw'}"
+          styleClass="p-fluid respDialog"  [formGroup]="announcementForm">
 
-<p-dialog [(visible)]="announcementDialog"  header="Edycja/zapis ogłoszenia" [modal]="true"
-styleClass="p-fluid respDialog" [contentStyle]="{ height:'350px'}" [formGroup]="announcementForm" >
-    <ng-template pTemplate="content" >
-        <div class="p-field">
-            <label for="title">Tytuł * </label>
-            <input type="text" pInputText id="title" [(ngModel)]="announcement.title" required autofocus
-            formControlName="announcementTitle"/>
-        </div>
-        <div class="p-field">
-            <label for="description">Opis</label>
-            <textarea pInputTextarea id="descryption" rows="5" [(ngModel)]="announcement.description"
-            formControlName="announcementDescription"></textarea>
-        </div>
-    </ng-template>
+          <ng-template pTemplate="content">
+              <div class="p-field">
+                  <input type="text" pInputText id="title" placeholder="Tytuł" name="file" [(ngModel)]="announcement.title" required autofocus
+                  formControlName="announcementTitle"/>
+              </div>
+              <div class="p-field">
+                  <p-multiSelect [options]="groups" [(ngModel)]="announcement.groupCollection"
+                                defaultLabel="Grupa"
+                                optionLabel="name"
+                                display="chip"
+                                formControlName="announcementGroupCollection">
+                  </p-multiSelect>
+              </div>
+              <div class="p-field">
+                  <div class="m-1"><label for="description">Opis</label></div>
+                  <textarea pInputTextarea id="descryption" rows="10"
+                              [(ngModel)]="announcement.description"
+                              formControlName="announcementDescription">
+                  </textarea>
+                  <button pButton pRipple label="Zapisz"
+                        class="p-button-raised p-button-info p-mt-3 "
+                        [disabled]="!announcementForm.valid"
+                        (click)="saveAnnouncement()"></button>
+              </div>
+
+              <app-m-file-manager [announcement] = 'announcement' (announementChange) ='announcementChange($event)'></app-m-file-manager>
+
+
+          </ng-template>
     <ng-template pTemplate="footer">
-        <button pButton pRipple label="Save" icon="pi pi-check" class="p-button-text"
-        [disabled]="!announcementForm.valid" (click)="saveAnnouncement()"></button>
-        <p-button icon="pi pi-check" (click)="announcementDialog=false; announcementForm.reset()" label="Ok" styleClass="p-button-text"></p-button>
+        <p-button icon="pi pi-check" (click)="announcementDialog=false" label="Zamknij" styleClass="p-button-text"></p-button>
     </ng-template>
 </p-dialog>
+
+
