--- a/frontend/angular-jwt-admin-system/src/app/pages/zarzadzanie/auth-users/privileges/privileges.component.html
+++ b/frontend/angular-jwt-admin-system/src/app/pages/zarzadzanie/auth-users/privileges/privileges.component.html
@@ -1,25 +1,25 @@
 <p-toast position="bottom-center"></p-toast>
 <p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
 <div class="card">
-    <p-toolbar styleClass="p-mb-4">
+    <p-toolbar styleClass="p-mb-4 b-light">
         <ng-template pTemplate="left">
             <button pButton pRipple label="Nowy" icon="pi pi-plus" class="p-button-success p-mr-2" (click)="openNew()"></button>
-            <button pButton pRipple  icon="pi pi-trash" class="p-button-danger" (click)="deleteSelectedPrivileges()" 
+            <button pButton pRipple  icon="pi pi-trash" class="p-button-danger" (click)="deleteSelectedPrivileges()"
             [disabled]="!selectedPrivileges || !selectedPrivileges.length"></button>
         </ng-template>
     </p-toolbar>
-  
-    <p-table #dt [value]="privileges" [rows]="10" [paginator]="true" 
+
+    <p-table #dt [value]="privileges" [rows]="10" [paginator]="true"
     [globalFilterFields]="['id','name']"
         [(selection)]="selectedPrivileges" [rowHover]="true" dataKey="id" [loading]="loading"
         currentPageReportTemplate="{first} z {last} / {totalRecords}" [showCurrentPageReport]="true"
-        styleClass="p-datatable-responsive-my">
+        styleClass="p-datatable-responsive-my p-shadow-3 ">
         <ng-template pTemplate="caption">
             <div class="p-d-flex">
                 <button pButton  class="p-button-outlined" icon="pi pi-filter-slash" (click)="clear(dt)"></button>
                 <span class="p-input-icon-left p-ml-auto">
                     <i class="pi pi-search"></i>
-                    <input pInputText type="text" [(ngModel)]="search" (input)="dt.filterGlobal($event.target.value, 'contains')" 
+                    <input pInputText type="text" [(ngModel)]="search" (input)="dt.filterGlobal($event.target.value, 'contains')"
                             placeholder="Wpisz" style="width:100%"/>
                 </span>
             </div>
@@ -42,11 +42,11 @@
                 <td><span class="p-column-title">Id</span> {{privilege.id}}</td>
                 <td><span class="p-column-title">Nazwa</span> {{privilege.name}}</td>
                 <td>
-                    <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-mr-2" 
-                    (click)="editPrivilege(privilege)" [disabled]="privilege.name === 'ONLY_ADMIN_PRIVILEGE' 
+                    <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-mr-2"
+                    (click)="editPrivilege(privilege)" [disabled]="privilege.name === 'ONLY_ADMIN_PRIVILEGE'
                         || privilege.name === 'WRITE_PRIVILEGE'
                         || privilege.name === 'READ_PRIVILEGE'"></button>
-                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" 
+                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"
                     (click)="deletePrivilege(privilege)" [disabled]="privilege.name === 'ONLY_ADMIN_PRIVILEGE'
                     || privilege.name === 'WRITE_PRIVILEGE'
                     || privilege.name === 'READ_PRIVILEGE'"></button>
@@ -61,12 +61,12 @@
     </p-table>
 </div>
 
-<p-dialog [(visible)]="privilegeDialog"  header="Edycja uprawnienia" [modal]="true" 
+<p-dialog [(visible)]="privilegeDialog"  header="Edycja uprawnienia" [modal]="true"
 styleClass="p-fluid respDialog" [contentStyle]="{ height:'200px'}" [formGroup]="privilegeForm" >
     <ng-template pTemplate="content" >
         <div class="p-field">
             <label for="name">Nazwa * </label>
-            <input type="text" pInputText id="name" [(ngModel)]="privilege.name"  autofocus 
+            <input type="text" pInputText id="name" [(ngModel)]="privilege.name"  autofocus
             formControlName="privilegeName"/>
         </div>
     </ng-template>
