--- a/frontend/angular-jwt-admin-system/src/app/pages/zarzadzanie/auth-users/users/users.component.html
+++ b/frontend/angular-jwt-admin-system/src/app/pages/zarzadzanie/auth-users/users/users.component.html
@@ -2,24 +2,24 @@
 <p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
 
 <div class="card">
-  
-    <p-toolbar styleClass="p-mb-4">
+
+    <p-toolbar styleClass="p-mb-4 b-light">
         <ng-template pTemplate="left">
             <button pButton pRipple label="Nowy" icon="pi pi-plus" class="p-button-success p-mr-2" (click)="openNew()"></button>
             <button pButton pRipple  icon="pi pi-trash" class="p-button-danger" (click)="deleteSelectedUsers()" [disabled]="!selectedUsers || !selectedUsers.length"></button>
         </ng-template>
     </p-toolbar>
-  
-    <p-table #dt [value]="users" [rows]="10" [paginator]="true" [globalFilterFields]="['id','username','roleCollectionToString','grupaToString']"
+
+    <p-table p-shadow-1 #dt [value]="users" [rows]="10" [paginator]="true" [globalFilterFields]="['id','username','roleCollectionToString','grupaToString']"
         [(selection)]="selectedUsers" [rowHover]="true" dataKey="id" [loading]="loading"
         currentPageReportTemplate="{first} z {last} / {totalRecords}" [showCurrentPageReport]="true"
-        styleClass="p-datatable-responsive-my">
+        styleClass="p-datatable-responsive-my p-shadow-3">
         <ng-template pTemplate="caption">
             <div class="p-d-flex">
                 <button pButton  class="p-button-outlined" icon="pi pi-filter-slash" (click)="clear(dt)"></button>
                 <span class="p-input-icon-left p-ml-auto">
                     <i class="pi pi-search"></i>
-                    <input pInputText type="text" [(ngModel)]="search" (input)="dt.filterGlobal($event.target.value, 'contains')" 
+                    <input pInputText type="text" [(ngModel)]="search" (input)="dt.filterGlobal($event.target.value, 'contains')"
                             placeholder="Wpisz" style="width:100%"/>
                 </span>
             </div>
@@ -29,19 +29,19 @@
                 <th style="width: 3rem">
                     <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
                 </th>
-                <th pSortableColumn="id" style="width:120px">Id 
+                <th pSortableColumn="id" style="width:120px">Id
                     <p-sortIcon field="id"></p-sortIcon>
                     <p-columnFilter type="text" field="id" display="menu"></p-columnFilter>
                 </th>
-                <th pSortableColumn="username">Nazwa 
+                <th pSortableColumn="username">Nazwa
                     <p-sortIcon field="username"></p-sortIcon>
                     <p-columnFilter type="text" field="username" display="menu"></p-columnFilter>
                 </th>
-                <th pSortableColumn="roleCollectionToString">Role 
+                <th pSortableColumn="roleCollectionToString">Role
                     <p-sortIcon field="roleCollectionToString"></p-sortIcon>
                     <p-columnFilter type="text" field="roleCollectionToString" display="menu"></p-columnFilter>
                 </th>
-                <th pSortableColumn="grupa.shortName">Grupa 
+                <th pSortableColumn="grupa.shortName">Grupa
                     <p-sortIcon field="grupa.shortName"></p-sortIcon>
                     <p-columnFilter type="text" field="grupa.shortName" display="menu"></p-columnFilter>
                 </th>
@@ -60,9 +60,9 @@
                 <td><span class="p-column-title">Grupa</span> {{user.grupa.shortName}}</td>
                 <td><span class="p-column-title">Aktywny</span> {{user.enabled}}</td>
                 <td>
-                    <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-mr-2" 
+                    <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-mr-2"
                     (click)="editUser(user)"></button>
-                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" 
+                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"
                     (click)="deleteUser(user)"></button>
                 </td>
             </tr>
@@ -75,34 +75,34 @@
     </p-table>
 </div>
 
-<p-dialog [(visible)]="userDialog"  header="Edycja Użytkownika" [modal]="true" 
-styleClass="p-fluid respDialog" [contentStyle]="{ height:'80vh'}" [formGroup]="userForm" >
+<p-dialog [(visible)]="userDialog"  header="Edycja Użytkownika" [modal]="true"
+styleClass="p-fluid respDialog" [contentStyle]="{overflow:'visible'}" [formGroup]="userForm" >
     <ng-template pTemplate="content" >
         <div class="p-field">
             <label for="name">Nazwa</label>
-            <input type="text" pInputText id="name" [(ngModel)]="user.username" 
-                    required autofocus 
+            <input type="text" pInputText id="name" [(ngModel)]="user.username"
+                    required autofocus
                     formControlName="nameUser"/>
         </div>
         <div class="p-field">
             <label for="haslo">Hasło * </label>
-            <p-password [(ngModel)]="user.password" 
-                        id="haslo" required  
+            <p-password [(ngModel)]="user.password"
+                        id="haslo" required
                         [toggleMask]="true"
                         formControlName="passUser">
             </p-password>
         </div>
         <div class="p-field">
             <label for="grupa">Grupa * </label>
-            <p-dropdown [(ngModel)]="user.grupa" inputId="grupa" [options]="groups" 
+            <p-dropdown [(ngModel)]="user.grupa" inputId="grupa" [options]="groups"
                         optionLabel="shortName" placeholder="Wybierz" appendTo="body"
-                        [filter]="true" filterBy="shortName" [showClear]="true" 
-                        formControlName="groupUser" >                
+                        [filter]="true" filterBy="shortName" [showClear]="true"
+                        formControlName="groupUser" >
             </p-dropdown>
         </div>
         <div class="p-field">
             <label for="fole">Role * </label>
-            <p-multiSelect [options]="roles" inputId="role" [(ngModel)]="user.roleCollection"  
+            <p-multiSelect [options]="roles" inputId="role" [(ngModel)]="user.roleCollection"
                 optionLabel="name" display="chip" formControlName="roleUser" required></p-multiSelect>
         </div>
         <div class="p-field">
