--- a/frontend/angular-jwt-admin-system/src/app/pages/zarzadzanie/grupy/grupy.component.html
+++ b/frontend/angular-jwt-admin-system/src/app/pages/zarzadzanie/grupy/grupy.component.html
@@ -2,24 +2,24 @@
 <p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
 
 <div class="card">
-    <p-toolbar styleClass="p-mb-4">
+    <p-toolbar styleClass="p-mb-4 b-light">
         <ng-template pTemplate="left">
             <button pButton pRipple label="Nowy" icon="pi pi-plus" class="p-button-success p-mr-2" (click)="openNew()"></button>
             <button pButton pRipple  icon="pi pi-trash" class="p-button-danger" (click)="deleteSelectedGroups()" [disabled]="!selectedGroups || !selectedGroups.length"></button>
         </ng-template>
     </p-toolbar>
-  
-    <p-table #dt [value]="groups" [rows]="10" [paginator]="true" 
+
+    <p-table #dt [value]="groups" [rows]="10" [paginator]="true"
     [globalFilterFields]="['id','name','privilegesString','poziomUprawnien']"
         [(selection)]="selectedGroups" [rowHover]="true" dataKey="id" [loading]="loading"
         currentPageReportTemplate="{first} z {last} / {totalRecords}" [showCurrentPageReport]="true"
-        styleClass="p-datatable-responsive-my">
+        styleClass="p-datatable-responsive-my p-shadow-3">
         <ng-template pTemplate="caption">
             <div class="p-d-flex">
                 <button pButton  class="p-button-outlined" icon="pi pi-filter-slash" (click)="clear(dt)"></button>
                 <span class="p-input-icon-left p-ml-auto">
                     <i class="pi pi-search"></i>
-                    <input pInputText type="text" [(ngModel)]="search" (input)="dt.filterGlobal($event.target.value, 'contains')" 
+                    <input pInputText type="text" [(ngModel)]="search" (input)="dt.filterGlobal($event.target.value, 'contains')"
                             placeholder="Wpisz" style="width:100%"/>
                 </span>
             </div>
@@ -46,9 +46,9 @@
                 <td><span class="p-column-title">Skróc. nawa</span> {{group.shortName}}</td>
                 <td><span class="p-column-title">Opis</span> {{group.description}}</td>
                 <td>
-                    <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-mr-2" 
+                    <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-mr-2"
                     (click)="editGroup(group)" [disabled]="group.name === 'admins'"></button>
-                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" 
+                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"
                     (click)="deleteGroup(group)" [disabled]="group.name === 'admins'"></button>
                 </td>
             </tr>
@@ -61,17 +61,17 @@
     </p-table>
 </div>
 
-<p-dialog [(visible)]="groupDialog"  header="Edycja grupy" [modal]="true" 
+<p-dialog [(visible)]="groupDialog"  header="Edycja grupy" [modal]="true"
 styleClass="p-fluid respDialog" [contentStyle]="{ height:'350px'}" [formGroup]="groupForm" >
     <ng-template pTemplate="content" >
         <div class="p-field">
             <label for="name">Nazwa * </label>
-            <input type="text" pInputText id="name" [(ngModel)]="group.name" required autofocus 
+            <input type="text" pInputText id="name" [(ngModel)]="group.name" required autofocus
             formControlName="groupName"/>
         </div>
         <div class="p-field">
             <label for="shortName">Skróc. nazwa * </label>
-            <input type="text" pInputText id="shortName" [(ngModel)]="group.shortName" required 
+            <input type="text" pInputText id="shortName" [(ngModel)]="group.shortName" required
             formControlName="groupShortName"/>
         </div>
         <div class="p-field">
