--- a/frontend/angular-jwt-admin-system/src/app/ui/content/content.component.scss
+++ b/frontend/angular-jwt-admin-system/src/app/ui/content/content.component.scss
@@ -1,30 +1,43 @@
 
- .content {
-    margin-left: 200px;    
-    margin-top:49px;
-    transition: 0.5s;
-}
-#inContent{
-      padding: 10px 20px 10px 20px;
-      min-height: 100vh; 
-  }  
+  .content {
+      margin-left: 200px;
+      margin-top:49px;
+      background-color: transparent;
+      background: linear-gradient(94deg, rgb(255, 255, 255) 0%, rgb(233, 233, 233) 46%, rgb(255, 255, 255) 100%);
+  }
+
+  #inContent{
+        padding: 10px 20px 10px 20px;
+        min-height: 100vh;
+        width:80%;
+        margin:auto;
+    }
 
   @media screen and (max-width: 800px) {
 
     .content {margin-left: 0;}
-    
+
       .content.responsiveContent, .content.responsiveContent *{
          z-index:0;
-         transition: 0s;
      }
     .content.responsiveContent{
         width: 100%;
         z-index: 0;
     }
 }
+
+@media screen and (max-width: 1200px) {
+  #inContent{
+    padding: 0;
+    width: 100%;
+}
+
+}
  @media screen and (min-width: 800px) {
- 
+
     .content.responsiveContent{
          margin-left:0;
      }
 }
+
+
