--- a/frontend/angular-jwt-admin-system/src/app/ui/top-nav/top-nav.component.scss
+++ b/frontend/angular-jwt-admin-system/src/app/ui/top-nav/top-nav.component.scss
@@ -1,15 +1,14 @@
-.topnav{
-    overflow: hidden;
-    position: fixed;
-    width:100%;
-    min-width: 145px;
-    height: 50px;
-    top:0px;
-    background-color: rgb(49, 73, 117);
-    background-color: var(--my-primary-color);
-    z-index:2;
-    transition:all 0.5s;
-  }
+  .topnav{
+      overflow: hidden;
+      position: fixed;
+      width:100%;
+      min-width: 145px;
+      height: 50px;
+      top:0px;
+      background-color: var(--my-primary-color);
+      z-index:2;
+      transition:all 0.3s;
+    }
 
   .topnav a {
     float: left;
@@ -19,25 +18,28 @@
     padding: 15px 16px;
     text-decoration: none;
     font-size: 17px;
-    transition: 0.7s;
+    transition: 0.5s;
   }
+
   .sideBarOpenSmall{
     float:left;
   }
-.topnav button{
-  margin:5px;
-}
+
+  .topnav button{
+    margin:5px;
+  }
+
   .topnav a:hover {
-    background-color: rgb(194, 212, 241);
-    color: black;
+    background-color: rgba(194, 212, 241, 0.459);
   }
- 
+
   .topnav .menuBarOpenSmall{
-    display: none;    
+    display: none;
   }
-.topnav .logIcon, .topnav .menuBarOpenSmall{
-  float: right;
-}
+
+  .topnav .logIcon, .topnav .menuBarOpenSmall{
+    float: right;
+  }
   @media screen and (max-width: 600px) {
 
     .topnav a:not(.first) {display: none;}
@@ -49,14 +51,17 @@
         float: left;
         display: block;
       }
-    
-    .topnav.responsive {position: relative;
-    height: 270px;
-  }
+
+    .topnav.responsive {
+      position: relative;
+      height: 200px;
+
+   }
+
     .topnav.responsive .menuBarOpenSmall {
-            position: absolute;
-            right: 0;
-            top: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
     }
     .topnav.responsive .logIcon {
       position: absolute;
