--- a/frontend/angular-jwt-admin-system/src/app/ui/content/content.component.scss
+++ b/frontend/angular-jwt-admin-system/src/app/ui/content/content.component.scss
@@ -3,6 +3,7 @@
       margin-left: 200px;
       margin-top:49px;
       background-color: transparent;
+      transition: 0.5s;
       background: linear-gradient(94deg, rgb(255, 255, 255) 0%, rgb(233, 233, 233) 46%, rgb(255, 255, 255) 100%);
   }
 
