--- a/frontend/angular-jwt-admin-system/src/app/ui/footer/footer.component.scss
+++ b/frontend/angular-jwt-admin-system/src/app/ui/footer/footer.component.scss
@@ -3,5 +3,6 @@
     min-height: 200px;
     color:whitesmoke;
     background-color: rgb(49, 73, 117);
-    background-color: var(--my-primary-color)
+    background-color: var(--my-primary-color);
+    width: 100%;
     }
