--- a/frontend/angular-jwt-admin-system/src/app/ui/top-nav/top-nav.component.html
+++ b/frontend/angular-jwt-admin-system/src/app/ui/top-nav/top-nav.component.html
@@ -1,8 +1,8 @@
 <div class="topnav" id="myTopnav" >
     <button pButton pRipple type="button" icon="pi pi-bars" class="sideBarOpenSmall p-button-rounded"
           onclick="sideBarSmallFunc()"></button>
-
-    <button pButton pRipple type="button" icon="pi pi-bookmark" routerLink="/announcements" label="Wiadomości"></button>
+    <a routerLink="/start" style="color:#61e065" routerLinkActive="activeLink"><span class="pi pi-home"></span> Start</a>
+    <a  routerLink="/announcements" routerLinkActive="activeLink"><span class="pi pi-bookmark"></span> Jadłospis</a>
 
     <button pButton pRipple type="button" icon="pi pi-bars" class="menuBarOpenSmall p-button-rounded"
     onclick="topNavSmallFunc()"></button>
